3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/map.c: Fix bug in get_rangevector which was causing reverse
 of documented procedure.  This also resulted in monsters not attacking
 adjacent creatures with physical attacks.  MSW 2001-11-03

Add weapontypes to the game.  These are currently used for nothing other
than messages, which are not fully written yet. Players should not see them
appear yet.
Fix the bug where you opened a door with a key and saw "You ."
Fix a bug in the PLUGIN code where current_weapon wasn't set when the
player loaded from savefile.
Take the setting of current_weapon out of #ifdef PLUGIN
garbled 2001-10-31

server/spell_util.c: Add out_of_map check to can_see_monsterP.  Fixes
  crash when casting ball lightning/divine shock (and likely other events)
  on maps not surrounded by walls.  MSW 2001-10-07

New attacktype messages for damage.  Now it gives you the message for the
damage type you actually did.  So if you are attacking with stormbringer,
you get electrical or drain-based messages.  Also added special messages for
the attack-based skills like punching, karate, etc.
garbled 2001-10-06

common/map.c: Add INS_ON_TOP flag to insert_ob_in_map calls to preserve
   stacking order.  Modify update_position to generate map spaces with
   more proper order.
common/object.c: Modify insert_ob_in_map so that it preserves stacking
   if INS_ON_TOP is set.
crossedit/CrEdit.c: Add missing code that would draw third face on a space.
include/object.h: Add INS_ON_TOP flag/define.
random_maps/exit.c: Modify code so that if the random maps leading to
   a special map are reset, they will properly link in with an already loaded